2003-04-28  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/streambuf.tcc (__copy_streambufs): Don't use
	_M_buf_size (synced input is now correctly dealt with
	elsewhere); when the output buffer is full don't fall back
	to a snextc-sputc loop, call overflow instead.

2003-04-28  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/sstream.tcc (pbackfail): Shorten a bit (6 lines)
	the innermost 'if' by factoring out some code.

2003-04-28  Phil Edwards  <pme@gcc.gnu.org>

	* configure.in:  Test for libintl.h.
	* include/bits/c++config:  Define __N for everybody.
	* include/bits/basic_string.h, include/bits/stl_bvector.h,
	include/bits/stl_deque.h, include/bits/stl_vector.h,
	include/std/std_bitset.h:  Wrap all __throw* text with __N.
	* po/Makefile.am (pot):  New rule, mostly working.
	* src/functexcept.cc:  Call gettext on all __throw* arguments when
	-fexceptions is in effect.
	* po/Makefile.in, config.h.in, configure:  Regenerate.

2003-04-28  Petur Runolfsson  <peturr02@ru.is>
 
        PR libstdc++/9523
        * include/bits/ios_base.h (Init::_S_ios_create,
        Init::_S_ios_destroy):  Remove declarations.
        (Init::_S_create_buffers,
        Init::_S_destroy_buffers):  Declare
        * src/ios.cc (Init::_S_ios_create):  Remove
        (Init::_S_create_buffers):  Create buffers and add to streams.
        (Init::_S_ios_destroy):  Rename to...
        (Init::_S_destroy_buffers):  this.
        (Init::Init):  Only construct streams once.
        (Init::~Init):  Flush streams, don't destroy them.
        (ios_base::sync_with_stdio):  Don't destroy streams, only buffers.
        * testsuite/27_io/ios_base/sync_with_stdio/9523.cc:  New test.
        * testsuite/27_io/objects/char/5.cc:  New test.
        * testsuite/27_io/objects/char/5268.cc:  Avoid undefined behavior.
        * testsuite/27_io/objects/char/6.cc:  New test.
        * testsuite/27_io/objects/char/7.cc:  New test.

2003-04-28  Benjamin Kosnik  <bkoz@redhat.com>
